docs(readme): simplify overview and add Java example
Vis-Session: 1a3a05a1-7d30-4eb8-8200-12dfb5d2e09d